--- a/en/index.html
+++ b/en/index.html
@@ -136,7 +136,7 @@
         <p class="subtitle">Legal documents and policies that govern our services</p>
 
         <div class="documents-grid">
-            <a href="en/privacy-policy.html" class="document-card">
+            <a href="privacy-policy.html" class="document-card">
                 <div>
                     <h2>Privacy Policy</h2>
                     <p>Learn how we collect, use, and protect your personal information.</p>
@@ -144,7 +144,7 @@
                 <span class="link-btn">Read More →</span>
             </a>
 
-            <a href="en/terms-of-use.html" class="document-card">
+            <a href="terms-of-use.html" class="document-card">
                 <div>
                     <h2>Terms of Use</h2>
                     <p>Understand the terms and conditions governing your use of our services.</p>
@@ -152,7 +152,7 @@
                 <span class="link-btn">Read More →</span>
             </a>
 
-            <a href="en/privacy-statement.html" class="document-card">
+            <a href="privacy-statement.html" class="document-card">
                 <div>
                     <h2>Privacy Statement</h2>
                     <p>Detailed information about how we handle your data and privacy rights.</p>
@@ -160,7 +160,7 @@
                 <span class="link-btn">Read More →</span>
             </a>
 
-            <a href="en/california-notice.html" class="document-card">
+            <a href="california-notice.html" class="document-card">
                 <div>
                     <h2>California Notice</h2>
                     <p>California Consumer Privacy Act (CCPA) disclosures and financial incentive programs.</p>
