--- a/en/privacy-statement.html
+++ b/en/privacy-statement.html
@@ -256,11 +256,11 @@
 <p>We may update this Privacy Statement periodically. Changes will be posted with an updated effective date.</p>
 
         <div class="nav-links">
-            <a href="en/index.html">← Back to Home</a>
-            <a href="en/privacy-policy.html">Privacy Policy</a>
-            <a href="en/terms-of-use.html">Terms of Use</a>
-            <a href="en/privacy-statement.html">Privacy Statement</a>
-            <a href="en/california-notice.html">California Notice</a>
+            <a href="index.html">← Back to Home</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-use.html">Terms of Use</a>
+            <a href="privacy-statement.html">Privacy Statement</a>
+            <a href="california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
