--- a/kr/privacy-policy.html
+++ b/kr/privacy-policy.html
@@ -302,11 +302,11 @@
 <p>본 개인정보 처리방침은 관련 법령, 정부 정책 또는 회사 내부 방침 변경에 따라 개정될 수 있으며, 개정 시 서비스 내 공지사항을 통해 사전에 안내합니다.</p>
 
         <div class="nav-links">
-            <a href="kr/index.html">← Back to Home</a>
-            <a href="kr/privacy-policy.html">Privacy Policy</a>
-            <a href="kr/terms-of-use.html">Terms of Use</a>
-            <a href="kr/privacy-statement.html">Privacy Statement</a>
-            <a href="kr/california-notice.html">California Notice</a>
+            <a href="index.html">← Back to Home</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-use.html">Terms of Use</a>
+            <a href="privacy-statement.html">Privacy Statement</a>
+            <a href="california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
