--- a/kr/privacy-statement.html
+++ b/kr/privacy-statement.html
@@ -236,11 +236,11 @@
 <p>자세한 내용은 개인정보 처리방침(Privacy Policy)을 참고하시기 바랍니다.</p>
 
         <div class="nav-links">
-            <a href="kr/index.html">← Back to Home</a>
-            <a href="kr/privacy-policy.html">Privacy Policy</a>
-            <a href="kr/terms-of-use.html">Terms of Use</a>
-            <a href="kr/privacy-statement.html">Privacy Statement</a>
-            <a href="kr/california-notice.html">California Notice</a>
+            <a href="index.html">← Back to Home</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-use.html">Terms of Use</a>
+            <a href="privacy-statement.html">Privacy Statement</a>
+            <a href="california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
