--- a/en/terms-of-use.html
+++ b/en/terms-of-use.html
@@ -194,13 +194,13 @@
     <div class="container">
         <h1>서비스 이용약관 (Terms of Use)</h1>
 <p><strong>시행일자</strong>: 2026년 ○월 ○일</p>
-<p>These Terms of Use (the “Terms”) govern the use of the AI-based deepfake voice detection application Catch AI (the “Service”) provided by AISRC (the “Company”). By accessing or using the Service, you agree to be bound by these Terms and the Privacy Policy. If you do not agree to these Terms, you must discontinue use of the Service.</p>
+<p>These Terms of Use (the Terms) govern the use of the AI-based deepfake voice detection application Catch AI (the Service) provided by AISRC (the Company). By accessing or using the Service, you agree to be bound by these Terms and the Privacy Policy. If you do not agree to these Terms, you must discontinue use of the Service.</p>
 <h2>1. Definitions</h2>
 <ul>
-<li><strong>“User”</strong> means any individual who accesses or uses the Service.</li>
-<li><strong>“Service”</strong> means the deepfake voice detection service and related functionalities provided by the Company.</li>
-<li><strong>“Audio Data”</strong> means any audio uploaded, imported from external sources (such as SNS or messaging platforms), or recorded directly by the User through the Service.</li>
-<li><strong>“Analysis Results”</strong> means informational outputs indicating the likelihood that the audio contains deepfake content.</li>
+<li><strong>User</strong> means any individual who accesses or uses the Service.</li>
+<li><strong>Service</strong> means the deepfake voice detection service and related functionalities provided by the Company.</li>
+<li><strong>Audio Data</strong> means any audio uploaded, imported from external sources (such as SNS or messaging platforms), or recorded directly by the User through the Service.</li>
+<li><strong>Analysis Results</strong> means informational outputs indicating the likelihood that the audio contains deepfake content.</li>
 </ul>
 <h2>2. Nature and Limitations of the Service</h2>
 <ol>
@@ -232,7 +232,7 @@
 </ol>
 <h2>6. Disclaimer and Limitation of Liability</h2>
 <ol>
-<li>The Service is provided on an “AS IS” basis.</li>
+<li>The Service is provided on an AS IS basis.</li>
 <li>The Company shall not be liable for errors, false positives, or false negatives in the Analysis Results.</li>
 <li>Any reliance on or use of the Analysis Results is at the User’s own risk.</li>
 <li>To the extent permitted by law, the Company shall not be liable for damages arising from the use of free services.</li>
